--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               management, or creative arts.
             </p>
           </div>
-          <div
+          <!-- <div
             class="card"
             data-aos="fade-right"
             data-aos-duration="1500"
@@ -158,7 +158,7 @@
               library, you'll find a vast collection of books, research
               materials, and educational tools to support your academic journey.
             </p>
-          </div>
+          </div> -->
           <div
             class="card"
             data-aos="fade-right"
