--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <title>Epic World</title>
   </head>
   <body>
-    <div id="preloader" class="bg-light-subtle">
+    <!-- <div id="preloader" class="bg-light-subtle">
       <div class="preloader-wrap">
         <img
           src="./Image/epiclogo.svg"
@@ -42,7 +42,7 @@
         />
         <div class="loading-bar"></div>
       </div>
-    </div>
+    </div> -->
 
     <div class="">
       <nav class="navbar">
@@ -87,7 +87,7 @@
 
     <section
       class="hero-section"
-      data-aos="fade-up"
+      data-aos="fade-down"
       data-aos-duration="1500"
       data-aos-easing="linear"
       data-aos-delay="300"
@@ -102,9 +102,10 @@
           data-aos-delay="300"
           data-aos-offset="0"
         >
-          <span>Welcome</span>
-          <span class="gradient">To Epic World</span>
+          <span>Welcome To</span>
+          <span class="gradient"> Epic World</span>
         </h1>
+        <p class="aboutEpic"><span id="element"></span></p>
         <p class="epic-world-para">
           <!-- <span id="element"></span> -->
           Welcome to EPIC WORLD, We are committed to providing a seamless blend
@@ -140,12 +141,12 @@
               management, or creative arts.
             </p>
           </div>
-          <!-- <div
+          <div
             class="card"
             data-aos="fade-right"
             data-aos-duration="1500"
             data-aos-easing="linear"
-            data-aos-delay="300"
+            data-aos-delay="400"
             data-aos-offset="0"
           >
             <div class="card-icon library">
@@ -158,13 +159,13 @@
               library, you'll find a vast collection of books, research
               materials, and educational tools to support your academic journey.
             </p>
-          </div> -->
+          </div>
           <div
             class="card"
             data-aos="fade-right"
             data-aos-duration="1500"
             data-aos-easing="linear"
-            data-aos-delay="300"
+            data-aos-delay="450"
             data-aos-offset="0"
           >
             <div class="card-icon teachers">
@@ -183,7 +184,7 @@
             data-aos="fade-right"
             data-aos-duration="1500"
             data-aos-easing="linear"
-            data-aos-delay="300"
+            data-aos-delay="500"
             data-aos-offset="0"
           >
             <div class="card-icon certification">
@@ -361,7 +362,7 @@
     <section>
       <div
         class="container"
-        data-aos="fade-zoom-in"
+        data-aos="fade-left"
         data-aos-easing="ease-in-back"
         data-aos-easing="linear"
         data-aos-delay="300"
@@ -697,7 +698,10 @@
 
   <script>
     var typed = new Typed("#element", {
-      strings: ["Your Gateway to Financial Freedom"],
+      strings: [
+        "The future of education is online and offline — a seamless blend",
+        "&amp; that caters to the needs and aspirations of every learner",
+      ],
       typeSpeed: 50,
       loop: true,
     });
